fixes and tests
Signed-off-by: Mark Herwege <mark.herwege@telenet.be>